# DotnetGoRustBenchmark

./: README.md  docker-compose.yml
docker/mongo/: mongo-init.js
docs/: network.drawio
k6/: script.js
src/dotnet/: App.sln  Dockerfile
src/dotnet/App/: App.sln
src/dotnet/App/App/: Dockerfile  Program.cs  appsettings.Development.json
src/dotnet/App/App/Models/: User.cs
src/dotnet/App/App/Repositories/: UsersRepository.cs
src/dotnet/src/: App.csproj  App.http  Program.cs  Startup.cs  appsettings.Development.json  appsettings.json
src/dotnet/src/Controllers/: HelloWorldController.cs  UsersController.cs
src/dotnet/src/Models/: DatabasesConfiguration.cs  MongoDatabaseConfiguration.cs  User.cs
src/dotnet/src/Properties/: launchSettings.json
src/dotnet/src/Repositories/: UsersRepository.cs
src/dotnet/src/Services/: UsersService.cs
src/go/: app.go  go.mod
src/go/controllers/: usersController.go
src/go/models/: user.go
src/go/repositories/: usersRepository.go
src/go/services/: usersService.go
src/rust/: Cargo.toml  Dockerfile
src/rust/src/: main.rs
src/rust/src/controllers/: hello_world_controller.rs  mod.rs  users_controller.rs
src/rust/src/models/: user.rs
src/rust/src/repositories/: users_repository.rs
src/rust/src/services/: users_service.rs
