[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.8.2"
tokio = "1.12"
serde_json = "1.0.79"
serde = "1.0.197"

[dependencies.rocket]
version = "0.5.0"
features = ["json"]